--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,42 +23,41 @@
     "@types/aws-lambda": "8.10.109",
     "@types/chai": "4.3.4",
     "@types/cors": "2.8.13",
-    "@types/mocha": "10.0.1",
-    "@types/node": "18.7.18",
+    "@types/express": "4.17.15",
+    "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.9",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1295.0",
+    "aws-sdk": "2.1296.0",
     "babel-loader": "9.1.2",
     "babel-preset-minify": "0.5.2",
-    "body-parser": "1.20.1",
     "cache-loader": "4.1.0",
     "chai": "4.3.7",
     "cors": "2.8.5",
-    "eslint": "8.31.0",
+    "eslint": "8.32.0",
     "eslint-plugin-notice": "0.9.10",
-    "express": "4.18.2",
-    "fork-ts-checker-webpack-plugin": "7.2.14",
-    "mocha": "10.2.0",
+    "fork-ts-checker-webpack-plugin": "7.3.0",
+    "jest": "29.3.1",
     "nodemon": "2.0.20",
+    "rimraf": "4.1.1",
     "serverless": "3.26.0",
     "serverless-plugin-common-excludes": "4.0.0",
-    "serverless-plugin-monorepo": "0.11.0",
     "sinon": "15.0.1",
     "sinon-chai": "3.7.0",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
+    "typescript": "4.9.4",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-node-externals": "3.0.0"
   },
   "scripts": {
     "build": "tsc -d true -p .",
-    "clean": "rm -rf ./lib/*",
-    "dist": "tsc -d true -p . && node scripts/dist.js",
-    "webpack": "webpack",
+    "clean": "rimraf ./lib",
+    "dist": "yarn webpack",
+    "webpack": "rimraf ./lib && webpack",
     "update:prod": "rimraf ./lib && yarn webpack && serverless deploy -f app --stage production",
     "deploy:staging": "rimraf ./lib && yarn webpack && serverless deploy --stage staging",
     "deploy:prod": "rimraf ./lib && yarn webpack && serverless deploy --stage production",
@@ -67,15 +66,17 @@
     "test": "exit 0"
   },
   "dependencies": {
+    "@xapp/contact-capture-handler": "1.0.4",
     "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/question-answering-handler": "2.1.8",
-    "@xapp/contact-capture-handler": "1.0.4",
-    "@xapp/stentor-alexa": "1.43.53",
-    "@xapp/stentor-dialogflow": "1.43.53",
+    "@xapp/stentor-gbm": "1.43.53",
     "@xapp/stentor-lex-connect": "1.43.53",
     "@xapp/stentor-lex-v2": "1.43.51",
+    "ansi-styles": "6.2.1",
+    "body-parser": "1.20.1",
+    "express": "4.18.2",
+    "stentor": "1.57.46",
     "stentor-channel": "1.57.46",
-    "stentor-user-storage-dynamo": "1.57.46",
-    "stentor": "1.57.46"
+    "stentor-user-storage-dynamo": "1.57.46"
   }
 }
