--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -9,17 +9,15 @@
     "access": "restricted"
   },
   "private": true,
-  "dependencies": {
-    "stentor": "1.57.46"
-  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "eslint": "8.31.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "eslint": "8.32.0",
     "eslint-plugin-notice": "0.9.10",
-    "typescript": "4.8.4"
+    "stentor-models": "1.57.46",
+    "typescript": "4.9.4"
   },
   "peerDependencies": {
-    "stentor": "1.X"
+    "stentor-models": "1.X"
   },
   "scripts": {
     "build": "tsc -d true -p .",
