--- a/packages/app/serverless.yml
+++ b/packages/app/serverless.yml
@@ -32,6 +32,7 @@ provider:
   region: us-east-1
   stackName: ${self:custom.myEnvironment.APP_ID}-${sls:stage}
   profile: ${env:AWS_PROFILE}
+  memorySize: 4096
   timeout: 15
   environment:
     NODE_ENV: ${sls:stage}
