--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "engines": {
-    "node": "^12 || ^14 || ^16"
+    "node": "^14 || ^16 || ^18 || ^20"
   },
   "devDependencies": {
     "@babel/core": "7.22.17",
@@ -31,7 +31,7 @@
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1404.0",
+    "aws-sdk": "2.1541.0",
     "babel-loader": "9.1.3",
     "babel-preset-minify": "0.5.2",
     "cache-loader": "4.1.0",
@@ -48,7 +48,7 @@
     "sinon": "15.1.2",
     "sinon-chai": "3.7.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4",
+    "typescript": "5.3.3",
     "webpack": "5.79.0",
     "webpack-cli": "5.0.2",
     "webpack-node-externals": "3.0.0"
@@ -66,17 +66,17 @@
     "test": "exit 0"
   },
   "dependencies": {
-    "@xapp/contact-capture-handler": "1.4.1",
+    "@xapp/contact-capture-handler": "1.5.2",
     "@xapp/oc-studio-starter-models": "1.0.0",
-    "@xapp/question-answering-handler": "2.4.1",
-    "@xapp/stentor-gbm": "1.52.49",
-    "@xapp/stentor-lex-connect": "1.52.49",
-    "@xapp/stentor-lex-v2": "1.52.49",
+    "@xapp/question-answering-handler": "2.4.3",
+    "@xapp/stentor-gbm": "1.52.85",
+    "@xapp/stentor-lex-connect": "1.52.85",
+    "@xapp/stentor-lex-v2": "1.52.85",
     "ansi-styles": "6.2.1",
     "body-parser": "1.20.2",
     "express": "4.18.2",
-    "stentor": "1.58.74",
-    "stentor-channel": "1.58.74",
-    "stentor-user-storage-dynamo": "1.58.64"
+    "stentor": "1.58.94",
+    "stentor-channel": "1.58.94",
+    "stentor-user-storage-dynamo": "1.58.87"
   }
 }
