--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -15,10 +15,10 @@
     "lib"
   ],
   "engines": {
-    "node": "^12 || ^14 || ^16"
+    "node": "^14 || ^16 || ^18 || ^20"
   },
   "devDependencies": {
-    "typescript": "5.0.4"
+    "typescript": "5.3.3"
   },
   "scripts": {
     "build": "tsc -d true -p .",
